Fixed alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 100px;
+  margin-top: 25px;
 }
 
 a {
